--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ table {
 body,html{
     width: 100%;
     font-family: 'Cera Pro';
-    background: url(./images/backgroung.png) no-repeat;
+    background: url(../images/backgroung.png) no-repeat;
     background-position: center;
     background-size: cover;
 }
